--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 # JPA? ???? Hibernate? ????? ??? SQL? ???? ???
 spring.jpa.properties.hibernate.format_sql=true
+spring.resources.static-locations=classpath:/static/
