--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	implementation 'mysql:mysql-connector-java:8.0.30'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	runtimeOnly 'com.mysql:mysql-connector-j'
+	implementation 'io.github.cdimascio:dotenv-java:2.3.2'
 
 	// 추가: Spring Boot DevTools 의존성
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
